--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -223,6 +223,7 @@ jobs:
       GOOS: ${{ matrix.target_os }}
       GOARCH: ${{ matrix.target_arch }}
       GOARM: ${{ matrix.arm || '' }}
+      GOMIPS: ${{ matrix.mips || '' }}
 
     steps:
     - name: Checkout
