--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -75,7 +75,16 @@ jobs:
       id: git-commit
       if: steps.nix-update-hashes.outputs.changed == 'true'
       run: |
-        git commit --all --signoff --message "fix(nix): Update version and hashes"
+        LAST_AUTHOR=$(git log -1 --pretty=format:"%ae")
+        RENOVATE_AUTHOR="29139614+renovate[bot]@users.noreply.github.com"
+
+        if [ "${LAST_AUTHOR}" = "${RENOVATE_AUTHOR}" ]; then
+          COMMIT_FLAGS="--amend --no-edit"
+        else
+          COMMIT_FLAGS="--signoff --message "fix(nix): Update version and hashes""
+        fi
+        
+        git commit ${COMMIT_FLAGS} --all
         git push
 
   build:
