--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -9,15 +9,10 @@ on:
   push:
     tags:
     - 'v*'
-  workflow_dispatch:
-  pull_request:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  workflow_call:
 
 jobs:
-  deploy:
+  build:
     name: Build website
     runs-on: ubuntu-24.04
     environment: release
