fix(module): update socket group, config file path, and start command
Signed-off-by: Adam Rizkalla <ajarizzo@gmail.com>

--- a/etc/cunicu.advanced.yaml
+++ b/etc/cunicu.advanced.yaml
@@ -21,6 +21,7 @@ backends:
 rpc:
   # Path to a Unix socket for management
   # and monitoring of the cunicu daemon.
+  # Leave empty or set to "systemd" to use systemd socket.
   socket: /run/cunicu.sock
 
   # Start of cunīcu daemon will block until
