fix(systemd): add ReadWritePaths for /etc/hosts
Signed-off-by: Adam Rizkalla <ajarizzo@gmail.com>

--- a/etc/systemd/cunicu.service
+++ b/etc/systemd/cunicu.service
@@ -46,6 +46,7 @@ ProtectKernelLogs=yes
 ProtectKernelTunables=yes
 ProtectProc=invisible
 ProtectSystem=strict
+ReadWritePaths=-/etc/hosts
 RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6 AF_NETLINK
 RestrictNamespaces=yes
 RestrictRealtime=yes
