fix(lint): Disable deprecated linters
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -61,7 +61,6 @@ linters:
   - cyclop
   - depguard
   - exhaustruct
-  - exportloopref
   - funlen
   - gocyclo
   - godox
@@ -74,5 +73,6 @@ linters:
   - paralleltest
   - protogetter
   - tagalign
+  - tenv
   - varnamelen
   - wrapcheck
