feat(config): add ignore_interfaces setting for ice agents
Signed-off-by: Adam Rizkalla <ajarizzo@gmail.com>

--- a/etc/cunicu.advanced.yaml
+++ b/etc/cunicu.advanced.yaml
@@ -314,6 +314,9 @@ ice:
   # A glob(7) pattern to match interfaces against which are used to gather ICE candidates (e.g. \"eth[0-9]\").
   interface_filter: "*"
 
+  # A glob(7) pattern to match interfaces against which are ignored when gathering ICE candidates (e.g. \"tun[0-9]\").
+  ignore_interfaces: ""
+
   # Lite agents do not perform connectivity check and only provide host candidates.
   lite: false
 
