--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,10 +37,12 @@ jobs:
         token: ${{ secrets.PAT }}
 
     - name: Setup Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      uses: cachix/install-nix-action@v31
 
     - name: Setup Nix cache
-      uses: DeterminateSystems/magic-nix-cache-action@v8
+      uses: cachix/cachix-action@v16
+      with:
+        name: cunicu
 
     - name: Setup Git
       run: |
@@ -130,10 +132,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      uses: cachix/install-nix-action@v31
 
     - name: Setup Nix cache
-      uses: DeterminateSystems/magic-nix-cache-action@v8
+      uses: cachix/cachix-action@v16
+      with:
+        name: cunicu
 
     - name: Run golangci-lint
       run: |
@@ -287,10 +291,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      uses: cachix/install-nix-action@v31
 
     - name: Setup Nix cache
-      uses: DeterminateSystems/magic-nix-cache-action@v8
+      uses: cachix/cachix-action@v16
+      with:
+        name: cunicu
 
     - name: Build cunīcu
       run: |
