--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -21,10 +21,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      uses: cachix/install-nix-action@v31
 
     - name: Setup Nix cache
-      uses: DeterminateSystems/magic-nix-cache-action@v8
+      uses: cachix/cachix-action@v16
+      with:
+        name: cunicu
 
     - name: Update Go modules
       run: |
