fix(ci): Pass Cachix token
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -180,6 +180,7 @@ jobs:
       uses: cachix/cachix-action@v16
       with:
         name: cunicu
+        authToken: '${{ secrets.CACHIX_TOKEN }}'
 
     - name: Build cunīcu
       run: |
