--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -57,6 +57,7 @@ jobs:
       uses: cachix/cachix-action@v16
       with:
         name: cunicu
+        authToken: '${{ secrets.CACHIX_TOKEN }}'
 
     - name: Run golangci-lint
       run: |
