--- a/.github/workflows/nix-update.yaml
+++ b/.github/workflows/nix-update.yaml
@@ -36,6 +36,7 @@ jobs:
       uses: cachix/cachix-action@v16
       with:
         name: cunicu
+        authToken: '${{ secrets.CACHIX_TOKEN }}'
 
     - name: Setup Git
       run: |
