--- a/etc/cunicu.advanced.yaml
+++ b/etc/cunicu.advanced.yaml
@@ -312,10 +312,10 @@ ice:
   # candidate_types: [host, srflx, prflx, relay]
 
   # A glob(7) pattern to match interfaces against which are used to gather ICE candidates (e.g. \"eth[0-9]\").
-  interface_filter: "*"
+  interface_include: "*"
 
   # A glob(7) pattern to match interfaces against which are ignored when gathering ICE candidates (e.g. \"tun[0-9]\").
-  ignore_interfaces: ""
+  interfaces_exclude: ""
 
   # Lite agents do not perform connectivity check and only provide host candidates.
   lite: false
