--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,10 +37,15 @@ jobs:
         token: ${{ secrets.PAT }}
 
     - name: Setup Nix
-      uses: DeterminateSystems/nix-installer-action@v16
+      uses: cachix/install-nix-action@v31
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
 
     - name: Setup Nix cache
-      uses: DeterminateSystems/magic-nix-cache-action@v9
+      uses: cachix/cachix-action@v15
+      with:
+        name: cunicu
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
     - name: Setup Git
       run: |
